# decision-trace-reconstructor

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  codemeta.json  pyproject.toml  ro-crate-metadata.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  installation.md  report.qmd  reports.md  roadmap.md
docs/adapters/: README.md  agentframework.md  anthropic.md  bedrock.md  crewai.md  generic-jsonl.md  langsmith.md  mcp.md  openai-agents.md  otlp.md  pydantic-ai.md
docs/schemas/: cells.schema.json  generic_jsonl_mapping.schema.json  named_incidents.schema.json  per_property.schema.json  per_scenario.schema.json
examples/agentframework_basic_agent/: README.md
examples/agentframework_basic_agent/expected_output/: feasibility.json  fragments.json  trace.jsonld
examples/agentframework_basic_agent/input/: events.jsonl
examples/anthropic_basic_agent/: README.md
examples/anthropic_basic_agent/expected_output/: feasibility.json  fragments.json  trace.jsonld
examples/anthropic_basic_agent/input/: messages_history.jsonl
examples/bedrock_basic_agent/: README.md
examples/bedrock_basic_agent/expected_output/: feasibility.json  fragments.json  trace.jsonld
examples/bedrock_basic_agent/input/: sessions.json
examples/crewai_basic_agent/: README.md
examples/crewai_basic_agent/expected_output/: feasibility.json  fragments.json  trace.jsonld
examples/crewai_basic_agent/input/: events.jsonl
examples/generic_jsonl_basic_agent/: README.md
examples/generic_jsonl_basic_agent/expected_output/: feasibility.json  fragments.json  trace.jsonld
examples/generic_jsonl_basic_agent/input/: agent_log.jsonl  mapping.yaml
examples/langsmith_basic_agent/: README.md
examples/langsmith_basic_agent/expected_output/: feasibility.json  fragments.json  trace.jsonld
examples/langsmith_basic_agent/input/: runs.json
examples/mcp_basic_agent/: README.md
examples/mcp_basic_agent/expected_output/: feasibility.json  fragments.json  trace.jsonld
examples/mcp_basic_agent/input/: transcript.jsonl
examples/oep_code_review_agent/: README.md
examples/oep_code_review_agent/expected_output/: feasibility.json
examples/oep_code_review_agent/input/: code_review_agent.jsonl  mapping.v0.yaml
examples/openai_agents_basic_agent/: README.md
examples/openai_agents_basic_agent/expected_output/: feasibility.json  fragments.json  trace.jsonld
examples/openai_agents_basic_agent/input/: trace.json
examples/otlp_basic_agent/: README.md
examples/otlp_basic_agent/expected_output/: trace.jsonld  (+2 more)
examples/pydantic_ai_basic_agent/: README.md
examples/replit_drop_database/: README.md  run.py
results/: cells.json  cells.jsonld  named_incidents.json  named_incidents.jsonld  per_property.json  per_scenario.json  per_scenario.jsonld
scripts/: export_schemas.py
src/reconstructor/: __init__.py  pipeline.py
tests/integration/: test_example_agentframework.py  test_example_anthropic.py  test_example_bedrock.py  test_example_crewai.py  test_example_generic_jsonl.py  test_example_langsmith.py  test_example_mcp.py  test_example_oep_code_review.py  test_example_openai_agents.py  test_example_otlp.py  test_example_pydantic_ai.py  test_example_replit.py
(+263 files in other folders)
